agregue una funcion que calcula el precio total de todos los productos en el carrito en forma de list item abajo de todo del carrito, ahora los elementos del carrito se ven en forma de list item y no como etiquetas section, y depure un poco las funciones

--- a/style/style.css
+++ b/style/style.css
@@ -75,6 +75,23 @@ body {
 }
 
 .sectionCarrito {
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
+  display: flex;
+  justify-content: center;
+  margin-top: 1%;
+}
+
+.mainCarrito {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.listaCarrito {
+  margin-top: 33px;
+}
+
+.listItemsCarrito {
+  border-color: black;
+  background-color: #DBC8AC;
 }/*# sourceMappingURL=style.css.map */
