--- a/style/style.scss
+++ b/style/style.scss
@@ -17,7 +17,7 @@ h2 {
       margin: 0;
 }
 
-.colorA{
+.colorA {
       color: black;
       text-decoration: none;
 }
@@ -72,11 +72,28 @@ body {
 }
 
 /* carrito */
-.imagenCarrito{
+.imagenCarrito {
       max-width: 100%;
 }
 
-.sectionCarrito{
-      padding-top: 0.5%;
-      padding-bottom: 0.5%;
+.sectionCarrito {
+      display: flex;
+      justify-content: center;
+      margin-top: 1%;
+}
+
+.mainCarrito {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+}
+
+.listaCarrito {
+      margin-top: 33px;
+}
+
+.listItemsCarrito {
+      border-color: black;
+      background-color: #DBC8AC;
 }
